# lazystream

./: Cargo.toml
src/: main.rs  normal.rs  opt.rs  playlist.rs
